--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="shortcut icon" type="image/png" href="<%= htmlWebpackPlugin.options.base_url %>static/favicon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= htmlWebpackPlugin.options.base_url %>static/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="<%= htmlWebpackPlugin.options.base_url %>static/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.options.base_url %>static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= htmlWebpackPlugin.options.base_url %>static/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.options.base_url %>static/favicon-16x16.png">
+    <link rel="manifest" href="<%= htmlWebpackPlugin.options.base_url %>static/manifest.json">
   </head>
   <body>
     <div id="app"></div>
